Finish hooking up everything in the program processor
This is a fairly big change which involves the following sub-changes:
- The program now serializes the output primitive type for the same reason as voice-to-effect primitive types are serialized
- BufferIndex was renamed to BufferHandle
- BufferManager now tracks whether each buffer is constant
- Much of ProgramProcessor has been rewritten in a more simplified manner with complex tasks delegated out to helper classes
- The entire processing pipeline now resides in a single StaticTaskGraph
- StaticTaskGraph now supports tasks which fan out into N sub-tasks (N is capped at initialization but can vary at runtime)
- Tasks with StaticTaskGraph now have the option of explicitly calling TaskCompleter::CompleteTask() rather than automatically finishing at the end of the execute callback
- TaskExecutor threads can be queried for thread index
- All native module call task management has been moved out of ProgramProcessor and into ProgramStageTaskManager
- Added VoiceAllocator class to keep track of which voices are active
- Added VoiceOutputAccumulator as utility functions outside of ProgramProcessor

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -63,11 +63,17 @@
     <ClCompile Include="ProgramProcessing\BufferMemory.ixx" />
     <ClCompile Include="ProgramProcessing\ConstantManager.cpp" />
     <ClCompile Include="ProgramProcessing\ConstantManager.ixx" />
+    <ClCompile Include="ProgramProcessing\ProgramStageTaskManager.cpp" />
+    <ClCompile Include="ProgramProcessing\ProgramStageTaskManager.ixx" />
     <ClCompile Include="ProgramProcessing\ProgramGraphUtilities.cpp" />
     <ClCompile Include="ProgramProcessing\ProgramGraphUtilities.ixx" />
     <ClCompile Include="ProgramProcessing\ProgramProcessing.ixx" />
     <ClCompile Include="ProgramProcessing\ProgramProcessor.cpp" />
     <ClCompile Include="ProgramProcessing\ProgramProcessor.ixx" />
+    <ClCompile Include="ProgramProcessing\VoiceAllocator.cpp" />
+    <ClCompile Include="ProgramProcessing\VoiceAllocator.ixx" />
+    <ClCompile Include="ProgramProcessing\VoiceOutputAccumulator.cpp" />
+    <ClCompile Include="ProgramProcessing\VoiceOutputAccumulator.ixx" />
     <ClCompile Include="Program\InstrumentProperties.ixx" />
     <ClCompile Include="Program\Program.cpp" />
     <ClCompile Include="Program\Program.ixx" />
