--- a/Foundation/Foundation.vcxproj
+++ b/Foundation/Foundation.vcxproj
@@ -64,6 +64,8 @@
     <ClCompile Include="Core\Concepts.ixx" />
     <ClCompile Include="Core\Core.ixx" />
     <ClCompile Include="Core\Enum.ixx" />
+    <ClCompile Include="Core\FloatingPointEnvironment.cpp" />
+    <ClCompile Include="Core\FloatingPointEnvironment.ixx" />
     <ClCompile Include="Core\FloatTraits.ixx" />
     <ClCompile Include="Core\ConstevalSafeCast.ixx" />
     <ClCompile Include="Foundation.ixx" />
