Add NativeModuleToolkit to provide a more convenient layer on top of the C API
The native module toolkit allows native modules to be written as C++ classes. Each native module class must provide static fields for ID and name. Then, any number of native module functions can be implemented (Prepare, InitializeVoice, DeinitializeVoice, SetVoiceActive, Invoke, and InvokeCompileTime). These can be a mix of static and member functions if desired (except for Prepare, which must be static). If any member functions are provided, the native module class is automatically instantiated and used as the voice context. Invoke (or InvokeCompileTime, if Invoke is not present) is used to define the native module's parameters and parameter ordering. Other functions may reference any of these parameters in any order as arguments. In addition, functions can optionally take NativeModuleCallContext as an argument (a wrapper around NativeModuleContext), as well as wrappers around scratch memory and latency related arguments when relevant.

Arguments to native module functions are provided using the CHORD_IN, CHORD_OUT, and CHORD_RETURN macros. These macros take the data type (specified in Chord syntax) as the first argument and argument name as the second argument. These macros automatically resolve to type-safe derived classes of NativeModuleArgumentBase.

This change also includes the following sub-changes:
- Added parsing functions to Guid
- Added StackAllocator and StackAllocatorCalculator utility classes used for scratch memory allocation

--- a/NativeTests/NativeTests.vcxproj
+++ b/NativeTests/NativeTests.vcxproj
@@ -79,8 +79,11 @@
     <ClCompile Include="Foundation\Utilities\BitOperations.cpp" />
     <ClCompile Include="Foundation\Utilities\Bounds.cpp" />
     <ClCompile Include="Foundation\Utilities\Copy.cpp" />
+    <ClCompile Include="Foundation\Utilities\Guid.cpp" />
     <ClCompile Include="Foundation\Utilities\Sha256.cpp" />
     <ClCompile Include="Foundation\Utilities\Unroll.cpp" />
+    <ClCompile Include="NativeLibraryToolkit\DeclareNativeModule.cpp" />
+    <ClCompile Include="NativeLibraryToolkit\StackAllocator.cpp" />
     <ClCompile Include="TestUtilities\ObjectWithConstructorArguments.ixx" />
     <ClCompile Include="TestUtilities\ResizableArrayBaseTests.ixx" />
     <ClCompile Include="Main.cpp" />
@@ -99,6 +102,9 @@
     </ProjectReference>
     <ProjectReference Include="..\Foundation\Foundation.vcxproj">
       <Project>{a95efdcc-40d3-4094-9a26-6783eb2ac1b8}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\NativeLibraryToolkit\NativeLibraryToolkit.vcxproj">
+      <Project>{b3e3a505-6f78-4a04-9cdb-112fd4e29b9a}</Project>
     </ProjectReference>
   </ItemGroup>
 </Project>
