Add native library toolkit utility to declare optimization rules
Optimization rules are declared using a set of shorthand functions under the OptimizationRuleSyntax namespace. An example is the following:

auto addNegativeToSubtract = DeclareOptimizationRule(
  nativeLibraryId,
  U"AddNegativeToSubtract",
  Call(add, In("a"), Call(negate, In("b"), OutReturn()), OutReturn()),
  Call(subtract, InRef("a"), InRef("b"), OutReturn()));

DeclareOptimizationRule() will convert this chain of method calls into a list of optimization rule components. Named variables can be used in the input pattern and referenced in output patterns; these will automatically resolve to indices. Similarly, for optimization rules with multiple output patterns, each (non-return) output in the input pattern should be named, as should the additional (non-return) output patterns; these name references will be automatically resolved.

Note that extensive syntax checking is not performed here (e.g. checking against native module argument types); this is already implemented in the compiler.

--- a/Foundation/Foundation.vcxproj
+++ b/Foundation/Foundation.vcxproj
@@ -120,6 +120,7 @@
     <ClCompile Include="Utilities\HashKey.ixx" />
     <ClCompile Include="Utilities\Sha256.cpp" />
     <ClCompile Include="Utilities\Sha256.ixx" />
+    <ClCompile Include="Utilities\StringLiteral.ixx" />
     <ClCompile Include="Utilities\Unroll.ixx" />
     <ClCompile Include="Utilities\Utilities.ixx" />
   </ItemGroup>
