--- a/Foundation/Foundation.vcxproj.filters
+++ b/Foundation/Foundation.vcxproj.filters
@@ -234,6 +234,9 @@
     <ClCompile Include="Core\Memory.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Utilities\StringLiteral.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Core\Assert.Macros.h">
