--- a/NativeLibraryToolkit/NativeLibraryToolkit.vcxproj
+++ b/NativeLibraryToolkit/NativeLibraryToolkit.vcxproj
@@ -54,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DeclareNativeModule.ixx" />
+    <ClCompile Include="DeclareOptimizationRule.ixx" />
     <ClCompile Include="NativeLibraryToolkit.ixx" />
     <ClCompile Include="NativeModuleArgumentStringParser.ixx" />
     <ClCompile Include="NativeModuleTypes.ixx" />
