--- a/Common.props
+++ b/Common.props
@@ -24,7 +24,7 @@
       <ModuleDependenciesFile>$(IntDir)%(RelativeDir)</ModuleDependenciesFile>
       <ObjectFileName>$(IntDir)%(RelativeDir)</ObjectFileName>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
-      <DisableSpecificWarnings>4324;4464;4514;4820;5045</DisableSpecificWarnings>
+      <DisableSpecificWarnings>4324;4464;4514;4686;4820;5045</DisableSpecificWarnings>
       <AdditionalIncludeDirectories>$(ProjectDir)\</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
