--- a/NativeLibraryToolkit/NativeLibraryToolkit.vcxproj.filters
+++ b/NativeLibraryToolkit/NativeLibraryToolkit.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="StackAllocator.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="DeclareOptimizationRule.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ChordArgument.h">
