Add IterateBuffers() utility
This function allows for easy/convenient iteration of a set of buffers. It automatically utilizes the best SIMD type available and also handles constant buffers and constant propagation (where constant inputs should lead to constant outputs).

--- a/NativeLibraryToolkit/NativeLibraryToolkit.vcxproj
+++ b/NativeLibraryToolkit/NativeLibraryToolkit.vcxproj
@@ -53,6 +53,7 @@
     <ClInclude Include="Macros.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="BufferIterator.ixx" />
     <ClCompile Include="DeclareNativeModule.ixx" />
     <ClCompile Include="DeclareOptimizationRule.ixx" />
     <ClCompile Include="NativeLibraryToolkit.ixx" />
