Mix of a few changes because I missed some files:
- Split up SIMD tests to greatly improve unit test build time
- Forgot to check in BufferIterator
- Add SIMD Gather operation
- Add bit array copy/set functions

--- a/Foundation/Foundation.vcxproj
+++ b/Foundation/Foundation.vcxproj
@@ -116,6 +116,8 @@
     <ClCompile Include="Utilities\BitOperations.ixx" />
     <ClCompile Include="Utilities\Copy.ixx" />
     <ClCompile Include="Utilities\Bounds.ixx" />
+    <ClCompile Include="Utilities\BitArrayOperations.cpp" />
+    <ClCompile Include="Utilities\BitArrayOperations.ixx" />
     <ClCompile Include="Utilities\Guid.ixx" />
     <ClCompile Include="Utilities\HashKey.ixx" />
     <ClCompile Include="Utilities\Sha256.cpp" />
