--- a/Foundation/Foundation.vcxproj.filters
+++ b/Foundation/Foundation.vcxproj.filters
@@ -237,6 +237,12 @@
     <ClCompile Include="Utilities\StringLiteral.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Utilities\BitArrayOperations.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Utilities\BitArrayOperations.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Core\Assert.Macros.h">
