--- a/NativeTests/NativeTests.vcxproj
+++ b/NativeTests/NativeTests.vcxproj
@@ -94,11 +94,13 @@
     <ClCompile Include="Foundation\Utilities\Guid.cpp" />
     <ClCompile Include="Foundation\Utilities\Sha256.cpp" />
     <ClCompile Include="Foundation\Utilities\Unroll.cpp" />
+    <ClCompile Include="NativeLibraries\Core\Arithmetic.cpp" />
     <ClCompile Include="NativeLibraryToolkit\DeclareNativeModule.cpp" />
     <ClCompile Include="NativeLibraryToolkit\DeclareOptimizationRule.cpp" />
     <ClCompile Include="NativeLibraryToolkit\BufferIterator.cpp" />
     <ClCompile Include="NativeLibraryToolkit\SetAndExtendConstant.cpp" />
     <ClCompile Include="NativeLibraryToolkit\StackAllocator.cpp" />
+    <ClCompile Include="TestUtilities\NativeModuleTesting.ixx" />
     <ClCompile Include="TestUtilities\ObjectWithConstructorArguments.ixx" />
     <ClCompile Include="TestUtilities\ResizableArrayBaseTests.ixx" />
     <ClCompile Include="Main.cpp" />
@@ -117,6 +119,9 @@
     </ProjectReference>
     <ProjectReference Include="..\Foundation\Foundation.vcxproj">
       <Project>{a95efdcc-40d3-4094-9a26-6783eb2ac1b8}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\NativeLibraries\Core\Core.vcxproj">
+      <Project>{3784d0cf-d4fd-449e-903a-d7ba1377754c}</Project>
     </ProjectReference>
     <ProjectReference Include="..\NativeLibraryToolkit\NativeLibraryToolkit.vcxproj">
       <Project>{b3e3a505-6f78-4a04-9cdb-112fd4e29b9a}</Project>
