Write tests for all modules in the Core native library and fix resulting bugs
Additionally, some missing optimization rules were added for array indexing.

--- a/NativeTests/NativeTests.vcxproj
+++ b/NativeTests/NativeTests.vcxproj
@@ -95,6 +95,10 @@
     <ClCompile Include="Foundation\Utilities\Sha256.cpp" />
     <ClCompile Include="Foundation\Utilities\Unroll.cpp" />
     <ClCompile Include="NativeLibraries\Core\Arithmetic.cpp" />
+    <ClCompile Include="NativeLibraries\Core\ArrayIndexing.cpp" />
+    <ClCompile Include="NativeLibraries\Core\Conversion.cpp" />
+    <ClCompile Include="NativeLibraries\Core\Delay.cpp" />
+    <ClCompile Include="NativeLibraries\Core\Latency.cpp" />
     <ClCompile Include="NativeLibraryToolkit\DeclareNativeModule.cpp" />
     <ClCompile Include="NativeLibraryToolkit\DeclareOptimizationRule.cpp" />
     <ClCompile Include="NativeLibraryToolkit\BufferIterator.cpp" />
